fixed navbar item alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,18 @@
+:root{
+    --action-color:#21bd21;
+}
 *{
     padding: 0;
     margin:0;
 }
 
-:root{
-    --action-color:#21bd21;
-}
+
 .btn{
-    padding: 1rem 3rem;
+    padding: 1rem 2rem;
     border-radius: 5px;
     font-size: 1rem;
     transition: .5s ease;
+    border:none;
 }
 .btn-action{
     background: var(--action-color);
@@ -22,9 +24,7 @@
 }
 #hero{
     background:rgb(220, 50, 50);
-    height: 60vh;
-    padding-top: 1.5rem;
-    margin-top:2rem;
+    padding:6rem 0;
 }
 #hero h1{
     color:white;
